metrics-app-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-app
spec:
  selector:
    app: metrics-app 
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
