metrics-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: metrics.local
    http:
      paths:
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: metrics-app
            port:
              number: 3000
